# Hazel

./: .gitignore  .gitmodules  README.md
Hazel_illustration/: BufferLayout.drawio  Context抽象.drawio  Renderer2D.drawio  Texture.drawio  batch_rendering.drawio  batch_rendering_texture.drawio  camera.drawio  game_archtecture.drawio  glsl_encapsulation.drawio  vertex.drawio
Hazel图解/: Context抽象.drawio  Renderer分层.drawio  buffer_api_abstract.drawio
Sandbox/: CMakeLists.txt  record.md
Sandbox/Hazel/: CMakeLists.txt  premake.lua
Sandbox/Hazel/src/: Hazel.h
Sandbox/Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  OrthographicCameraController.cpp  OrthographicCameraController.h  glad.c  hzpch.cpp  hzpch.h
Sandbox/Hazel/src/Hazel/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  KeyCodes.h  Layer.cpp  LayerStack.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  Timestep.h  Window.h
Sandbox/Hazel/src/Hazel/Debug/: Instrumentor.h
Sandbox/Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Sandbox/Hazel/src/Hazel/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Sandbox/Hazel/src/Hazel/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  main.cpp
Sandbox/Hazel/src/Hazel/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/Hazel/src/Hazel/Platform/include/glad/: glad.h
Sandbox/Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Sandbox/assets/shaders/: FlatColor.glsl  GameTexture.glsl  Texture.glsl
Sandbox/engine/: CMakeLists.txt
Sandbox/engine/src/: Test.cpp  Test.h
Sandbox/src/: Application.cpp  Color.h  GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Random.cpp  Random.h  Renderer2D.cpp  Renderer2D.h  SandBoxApp.cpp  Sandbox2D.cpp  Sandbox2D.h
